--- a/index.html
+++ b/index.html
@@ -72,18 +72,82 @@
     </div>
 
     <div class="s">
-        <div class="s1">
+        <div class="sc s1" id="s1">
+            <div class="sector-header">
+                <h1 class="sector-label">SECTOR 1</h1>
+                <h2 class="about-label">ABOUT ME</h2>
+            </div>
+
             <img class="toprail" src="images/toprail.png">
             <img class="tracks" src="images/tracks.png">
             <img class="bottomrail" src="images/toprail.png">
         </div>
         <div class="blackbase"></div>
-        <div class="s1">
+        <div class="sc s2" id="s2">
+            <div class="sector-header">
+                <h1 class="sector-label">SECTOR 2</h1>
+                <h2 class="about-label">PROJECTS</h2>
+            </div>
+
             <img class="toprail" src="images/toprail.png">
             <img class="tracks" src="images/tracks.png">
             <img class="bottomrail" src="images/toprail.png">
         </div>
         <div class="blackbase"></div>
+        <div class="sc s3" id="s3">
+            <div class="sector-header">
+                <h1 class="sector-label">SECTOR 3</h1>
+                <h2 class="about-label">SKILLS</h2>
+            </div>
+
+            <img class="toprail" src="images/toprail.png">
+            <img class="tracks" src="images/tracks.png">
+            <img class="bottomrail" src="images/toprail.png">
+        </div>
+        <div class="blackbase"></div>
+        <div class="sc s4" id="s4">
+            <div class="sector-header">
+                <h1 class="sector-label">SECTOR 4</h1>
+                <h2 class="about-label">ACHIEVEMENTS</h2>
+            </div>
+
+            <img class="toprail" src="images/toprail.png">
+            <img class="tracks" src="images/tracks.png">
+            <img class="bottomrail" src="images/toprail.png">
+        </div>
+        <div class="blackbase"></div>
+        <div class="sc s5" id="s5">
+            <div class="sector-header">
+                <h1 class="sector-label">SECTOR 5</h1>
+                <h2 class="about-label">EXPERIENCES</h2>
+            </div>
+
+            <img class="toprail" src="images/toprail.png">
+            <img class="tracks" src="images/tracks.png">
+            <img class="bottomrail" src="images/toprail.png">
+        </div>
+        <div class="blackbase"></div>
+        <div class="sc s6" id="s6">
+            <div class="sector-header">
+                <h1 class="sector-label">SECTOR 6</h1>
+                <h2 class="about-label">RESUME</h2>
+            </div>
+
+            <img class="toprail" src="images/toprail.png">
+            <img class="tracks" src="images/tracks.png">
+            <img class="bottomrail" src="images/toprail.png">
+        </div>
+        <div class="blackbase"></div>
+        <div class="sc s7" id="s7">
+            <div class="sector-header">
+                <h1 class="sector-label">SECTOR 7</h1>
+                <h2 class="about-label">CONTACT</h2>
+            </div>
+
+            <img class="toprail" src="images/toprail.png">
+            <img class="tracks" src="images/tracks.png">
+            <img class="bottomrail" src="images/toprail.png">
+        </div>
     </div>
 
 
