S1 and Lift Man

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/s.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
 
     <div class="liftcontent">
         <img class="lift" src="images/lift.png">
+        <img class="man" id="man" src="images/man.png">
     </div>
     <div class="main particle-container">
         <video autoplay muted loop playsinline><source src="images/mainback.mp4" type="video/mp4"></video>
@@ -76,6 +78,42 @@
             <div class="sector-header">
                 <h1 class="sector-label">SECTOR 1</h1>
                 <h2 class="about-label">ABOUT ME</h2>
+            </div>
+            <div class="about">
+                <p class="aboutme">
+                    Hey peeps! I’m Rakkesh, a computer science undergrad who’s obsessed with building tech that actually matters. Whether it’s AI, smart systems, or wild UI ideas like this site (yep, I coded this!), I love turning random sparks into working stuff. Currently deep into ML, embedded systems, and whatever else keeps my brain buzzing.
+                </p>
+                <div class="aboutgrid">
+                    <div class="left-top ab">
+                        <h3 class="edh" style="text-align: center;"><img src="images/grad.png" style="height: 100%;">EDUCATION</h3>
+                        <div class="ed">BE CSE - Sathyabama University</div>
+                        <div class="ed">12th - D.A.V Boys Sr Sec School</div>
+                    </div>
+                    <div class="left-bottom ab">
+                        <h3 class="edh" style="text-align: center;"><img class="hby" src="images/hobbies.png">PASSION | HOBBIES</h3>
+                        <div class="ed">Self Taught Professional Artist</div>
+                        <div class="ed">Western Singing / Song Composing</div>
+                    </div>
+                    <div class="right-full ab">
+                        <h3 class="histhead" style="text-align: center;"><img src="images/time.png" class="hby">MY HISTORY</h3>
+                        <div class="his">
+                            <div class="event"><span class="year">2019</span><span class="desc">Completed 10th Grade</span></div>
+                            <div class="event"><span class="year">2021</span><span class="desc">Completed 12th Grade</span></div>
+                            <div class="event"><span class="year" style="border-right: red solid 3px;">2021</span><span class="desc">Coundn't crack NEET</span></div>
+                            <div class="event"><span class="year">2022</span><span class="desc">Learnt Basic Python</span></div>
+                            <div class="event"><span class="year">2022</span><span class="desc">Joined BE CSE</span></div>
+                            <div class="event"><span class="year">2023</span><span class="desc">9th University Rank</span></div>
+                            <div class="event"><span class="year">2023</span><span class="desc">Started HEDIS Project</span></div>
+                            <div class="event"><span class="year">2024</span><span class="desc">Learnt Web Dev</span></div>
+                            <div class="event"><span class="year">2024</span><span class="desc">4th University Rank</span></div>
+                            <div class="event"><span class="year">2024</span><span class="desc">Completed HEDIS</span></div>
+                            <div class="event"><span class="year">2025</span><span class="desc">HEDIS V2 Initiated</span></div>
+                            <div class="event"><span class="year">2025</span><span class="desc">Intern at IIT Madras</span></div>
+                            <div class="event"><span class="year" style="border-right: 0px;">2025</span><span class="desc">To Be Continued...</span></div>
+                        </div>
+                        <img class="fade" src="images/fade.png">
+                    </div>
+                </div>
             </div>
 
             <img class="toprail" src="images/toprail.png">
