--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                 </p>
                 <div class="aboutgrid">
                     <div class="left-top ab">
-                        <h3 class="edh" style="text-align: center;"><img src="images/grad.png" style="height: 100%;">EDUCATION</h3>
+                        <h3 class="edh" style="text-align: center;"><img src="images/grad.png" class="hby">EDUCATION</h3>
                         <div class="ed">BE CSE - Sathyabama University</div>
                         <div class="ed">12th - D.A.V Boys Sr Sec School</div>
                     </div>
                     <div class="left-bottom ab">
                         <h3 class="edh" style="text-align: center;"><img class="hby" src="images/hobbies.png">PASSION | HOBBIES</h3>
                         <div class="ed">Self Taught Professional Artist</div>
-                        <div class="ed">Western Singing / Song Composing</div>
+                        <div class="ed">Western Singing / Composing</div>
                     </div>
                     <div class="right-full ab">
                         <h3 class="histhead" style="text-align: center;"><img src="images/time.png" class="hby">MY HISTORY</h3>
@@ -102,6 +102,7 @@
                             <div class="event"><span class="year" style="border-right: red solid 3px;">2021</span><span class="desc">Coundn't crack NEET</span></div>
                             <div class="event"><span class="year">2022</span><span class="desc">Learnt Basic Python</span></div>
                             <div class="event"><span class="year">2022</span><span class="desc">Joined BE CSE</span></div>
+                            <div class="event"><span class="year">2023</span><span class="desc">Published a Novel</span></div>
                             <div class="event"><span class="year">2023</span><span class="desc">9th University Rank</span></div>
                             <div class="event"><span class="year">2023</span><span class="desc">Started HEDIS Project</span></div>
                             <div class="event"><span class="year">2024</span><span class="desc">Learnt Web Dev</span></div>
@@ -112,6 +113,7 @@
                             <div class="event"><span class="year" style="border-right: 0px;">2025</span><span class="desc">To Be Continued...</span></div>
                         </div>
                         <img class="fade" src="images/fade.png">
+                        <h4 class="scrol">▽</h4>
                     </div>
                 </div>
             </div>
